First steps for refactoring backend to GoFr
