# checklistix-backend/internal/models/authform.go
@@ -1,0 +1,7 @@
+package models
+
+type AuthForm struct {
+	Email      string `json:"email"`
+	Password   string `json:"password"`
+	RememberMe bool   `json:"rememberMe,omitempty"`
+}
