# openapi/checklistix-data.yaml
@@ -1,10 +1,10 @@
 openapi: 3.0.3
 info:
-  title: Checklistix API
-  description: Checklistix API
+  title: Checklistix Data API
+  description: Checklistix Data API
   version: 1.0.0
 servers:
-  - url: 'https://localhost:8888/api'
+  - url: 'https://localhost:9091'
     description: Development server
 tags:
   - name: Checklists
@@ -300,57 +300,6 @@ paths:
       responses:
         '204':
           description: Ok
-        '400':
-          description: Bad request
-        '500':
-          description: Internal server error
-
-  /auth/sign-up:
-    post:
-      tags:
-        - Auth
-      summary: Sign up
-      requestBody:
-        description: User information
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/AuthForm'
-      responses:
-        '201':
-          description: Created
-        '400':
-          description: Bad request
-        '500':
-          description: Internal server error
-  /auth/sign-in:
-    post:
-      tags:
-        - Auth
-      summary: Sign in
-      requestBody:
-        description: User information
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/AuthForm'
-      responses:
-        '200':
-          description: Ok
-        '400':
-          description: Bad request
-        '500':
-          description: Internal server error
-  /auth/sign-out:
-    post:
-      tags:
-        - Auth
-      summary: Sign out
-      responses:
-        '204':
-          description: No content
         '400':
           description: Bad request
         '500':
@@ -808,19 +757,3 @@ components:
         - Subtitle
         - LeftText
         - RightText
-
-    AuthForm:
-      type: object
-      required:
-        - email
-        - password
-      properties:
-        email:
-          type: string
-          format: email
-        password:
-          type: string
-          format: password
-        rememberMe:
-          type: boolean
-          default: false
